--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -280,86 +280,52 @@
             </h2>
 
             <div class="projects-grid">
-                <!-- Project 1 -->
-                <div class="project-card" data-aos="zoom-in" data-aos-delay="100">
-                    <div class="project-image">
-                        <img src="assets/images/project1.jpg" alt="E-commerce Platform">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link" aria-label="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" aria-label="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3>E-commerce Platform</h3>
-                        <p>Full-stack e-commerce solution with React, Node.js, and Stripe integration</p>
-                        <div class="project-tech">
-                            <span>React</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 2 -->
-                <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
-                    <div class="project-image">
-                        <img src="assets/images/project2.jpg" alt="Task Management App">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link" aria-label="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" aria-label="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Task Management App</h3>
-                        <p>Collaborative task manager with real-time updates and team features</p>
-                        <div class="project-tech">
-                            <span>Vue.js</span>
-                            <span>Firebase</span>
-                            <span>Tailwind</span>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Project 3 -->
-                <div class="project-card" data-aos="zoom-in" data-aos-delay="300">
-                    <div class="project-image">
-                        <img src="assets/images/project3.jpg" alt="Weather Dashboard">
-                        <div class="project-overlay">
-                            <div class="project-links">
-                                <a href="#" class="project-link" aria-label="View Live">
-                                    <i class="fas fa-external-link-alt"></i>
-                                </a>
-                                <a href="#" class="project-link" aria-label="View Code">
-                                    <i class="fab fa-github"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-content">
-                        <h3>Weather Dashboard</h3>
-                        <p>Interactive weather app with forecasts, maps, and location services</p>
-                        <div class="project-tech">
-                            <span>JavaScript</span>
-                            <span>API</span>
-                            <span>Chart.js</span>
-                        </div>
-                    </div>
+    <!-- Project 1 -->
+    <div class="project-card" data-aos="zoom-in" data-aos-delay="100">
+        <div class="project-image">
+            <img src="assets/images/project1.jpg" alt="Tutorial on Word Embeddings">
+            <div class="project-overlay">
+                <div class="project-links">
+                    <a href="https://github.com/edwardleen95/Tutorial-on-Word-Embeddings" class="project-link" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
                 </div>
             </div>
         </div>
-    </section>
+        <div class="project-content">
+            <h3>Tutorial on Word Embeddings</h3>
+            <p>Comprehensive guide on implementing and understanding word embeddings using Python and natural language processing techniques.</p>
+            <div class="project-tech">
+                <span>Python</span>
+                <span>OpenAI</span>
+                <span>Data Processing</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
+        <div class="project-image">
+            <img src="assets/images/project2.jpg" alt="EDA on Star Dataset">
+            <div class="project-overlay">
+                <div class="project-links">
+                    <a href="https://github.com/edwardleen95/EDA-on-Star-Dataset" class="project-link" target="_blank">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="project-content">
+            <h3>EDA on Star Dataset</h3>
+            <p>Exploratory data analysis on astronomical data to classify stars using machine learning techniques and statistical methods.</p>
+            <div class="project-tech">
+                <span>Python</span>
+                <span>Scikit-learn</span>
+                <span>TensorFlow</span>
+            </div>
+        </div>
+    </div>
+</div>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
