--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -72,7 +72,7 @@
         <div class="hero-content">
             <div class="hero-text" data-aos="fade-up">
                 <span class="hero-greeting">Hello, I'm</span>
-                <h1 class="hero-name glitch" data-text="[Your Name]">Edward Leen</h1>
+                <h1 class="hero-name glitch" data-text="Edward Leen">Edward Leen</h1>
                 <div class="hero-title">
                     <span class="typed-text"></span>
                     <span class="cursor-blink">|</span>
